[gd_scene load_steps=21 format=3 uid="uid://baeg7c16aji2u"]

[ext_resource type="Script" path="res://src/scenes/main/title_screen/title_screen.gd" id="1_uqkmj"]
[ext_resource type="Texture2D" uid="uid://brct1kbsg135o" path="res://assets/bg/parallax/bg_parallax_0.png" id="2_6yv16"]
[ext_resource type="PackedScene" uid="uid://biqm56x6ewbmo" path="res://src/ui/setting_ui/SettingUI.tscn" id="2_ontx6"]
[ext_resource type="Shader" path="res://src/utils/shader/scrolling_background.gdshader" id="3_55loa"]
[ext_resource type="Texture2D" uid="uid://d4m2nj3qf4kvh" path="res://assets/bg/parallax/bg_parallax_6.png" id="3_ajfpa"]
[ext_resource type="Texture2D" uid="uid://califjsnesmsy" path="res://assets/bg/parallax/bg_parallax_2.png" id="4_f1my6"]
[ext_resource type="Shader" path="res://src/utils/shader/2d_wind_sway.gdshader" id="5_757qd"]
[ext_resource type="Texture2D" uid="uid://ccgrg4sfll718" path="res://assets/sprite/env/lightbulb_grass.png" id="5_sh6h8"]
[ext_resource type="Texture2D" uid="uid://dj7feymuphnh2" path="res://assets/sprite/swarm/swarm_sprite_2.png" id="8_14033"]
[ext_resource type="Texture2D" uid="uid://dxxyxffr24eve" path="res://assets/sprite/swarm/swarm_sprite_1.png" id="9_h8py5"]
[ext_resource type="AudioStream" uid="uid://cy70vylc0p5kp" path="res://assets/bgm/lachlan-sketch2-60bpm-Abmin-0.2.mp3" id="10_ahqvm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g8ysj"]
shader = ExtResource("3_55loa")
shader_parameter/motion = Vector2(15, 0)
shader_parameter/scale = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3gfmc"]
shader = ExtResource("5_757qd")
shader_parameter/speed = 1.0
shader_parameter/minStrength = 0.05
shader_parameter/maxStrength = 0.01
shader_parameter/strengthScale = 100.0
shader_parameter/interval = 3.5
shader_parameter/detail = 1.0
shader_parameter/distortion = null
shader_parameter/heightOffset = null
shader_parameter/offset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cskjw"]
shader = ExtResource("5_757qd")
shader_parameter/speed = 1.0
shader_parameter/minStrength = 0.05
shader_parameter/maxStrength = 0.01
shader_parameter/strengthScale = 100.0
shader_parameter/interval = 3.5
shader_parameter/detail = 1.0
shader_parameter/distortion = 0.0
shader_parameter/heightOffset = 0.0
shader_parameter/offset = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b4rlw"]
shader = ExtResource("5_757qd")
shader_parameter/speed = 1.0
shader_parameter/minStrength = 0.05
shader_parameter/maxStrength = 0.01
shader_parameter/strengthScale = 100.0
shader_parameter/interval = 3.5
shader_parameter/detail = 1.0
shader_parameter/distortion = null
shader_parameter/heightOffset = null
shader_parameter/offset = 20.0

[sub_resource type="Gradient" id="Gradient_t6iq6"]
offsets = PackedFloat32Array(0, 0.196721, 0.52459, 0.778689, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ibv5u"]
gradient = SubResource("Gradient_t6iq6")

[sub_resource type="Curve" id="Curve_i340v"]
_data = [Vector2(0, 0.516483), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.494505), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_eveia"]
curve = SubResource("Curve_i340v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qpyhj"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(500, 500, 1)
initial_velocity_min = -20.0
initial_velocity_max = 20.0
gravity = Vector3(0, -10, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_eveia")
color_ramp = SubResource("GradientTexture1D_ibv5u")

[node name="Titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqkmj")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cloud" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6yv16")
expand_mode = 1
stretch_mode = 1

[node name="CloudAnim" type="TextureRect" parent="Background"]
material = SubResource("ShaderMaterial_g8ysj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6yv16")
expand_mode = 1
stretch_mode = 1

[node name="Grass" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ajfpa")
expand_mode = 1

[node name="LightbulbGrass" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_3gfmc")
position = Vector2(1176, 456)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_sh6h8")

[node name="LightbulbGrass2" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_cskjw")
position = Vector2(888, 536)
rotation = 0.0497228
scale = Vector2(0.57, 0.725676)
texture = ExtResource("5_sh6h8")

[node name="LightbulbGrass3" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_3gfmc")
position = Vector2(112, 520)
rotation = 0.142932
texture = ExtResource("5_sh6h8")

[node name="LightbulbGrass4" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_b4rlw")
position = Vector2(640, 584)
rotation = -0.155058
texture = ExtResource("5_sh6h8")

[node name="LightbulbGrass5" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_3gfmc")
position = Vector2(776, 592)
rotation = 0.129073
scale = Vector2(0.512176, 0.512176)
texture = ExtResource("5_sh6h8")

[node name="Grass2" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_f1my6")
expand_mode = 1

[node name="MouseFollowSprite" type="Sprite2D" parent="."]
position = Vector2(640, -128)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_14033")

[node name="TitleMenu" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 64.0
offset_right = 384.0
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="TitleLabel" type="Label" parent="TitleMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.5
offset_top = 53.0
offset_right = 157.5
offset_bottom = 168.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Faes in the Faerest"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TitleMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = 64.0
offset_right = 97.5
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="TitleMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="SettingButton" type="Button" parent="TitleMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Setting"

[node name="CreditButton" type="Button" parent="TitleMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Credit"

[node name="QuitButton" type="Button" parent="TitleMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="VersionLabel" type="Label" parent="TitleMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -23.0
offset_right = 76.0
grow_horizontal = 2
grow_vertical = 0
text = "v0.1"
horizontal_alignment = 1

[node name="CreditPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -726.0
offset_top = 64.0
offset_right = -150.0
offset_bottom = 320.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="Label" type="Label" parent="CreditPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Made with love by
Programmers: ChewieCB, Lam Nguyen
Musician: Lachlan James, Thrrrrrobin William
Artist: Redvirus, Grace, Ashwok, Lil'Red
Story: Everyone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(640, 200)
amount = 32
process_material = SubResource("ParticleProcessMaterial_qpyhj")
texture = ExtResource("9_h8py5")
lifetime = 8.0
visibility_rect = Rect2(0, 0, 0, 0)

[node name="SettingUI" parent="." instance=ExtResource("2_ontx6")]
visible = false
layout_mode = 1
offset_left = 461.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ahqvm")
volume_db = 10.0
autoplay = true

[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/StartButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/SettingButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/CreditButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="mouse_entered" from="TitleMenu/VBoxContainer/QuitButton" to="." method="play_button_hover_sfx"]
[connection signal="pressed" from="TitleMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
